--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,259 @@
 }
 
 
+.visible {
+  display: flex ;
+}
+
+.novisible {
+  display: none !important
+
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+
+  overflow: hidden;
+  margin: 0;
+}
+
+#btn {
+  height: 18%;
+  width: 100%;
+  position: absolute;
+  bottom: 0px;
+  display: flex;
+
+  flex-direction: column;
+  justify-content: flex-end;
+
+}
+
+#divBtnAgenda {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 0px;
+  font-size: 20px;
+  color: white;
+}
+
+#divBtnAgenda input {
+  color: #D4C3B5;
+  border-color: #D4C3B5;
+  font-size: 17px;
+  border-radius: 10px 120px / 120px;
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 5px
+}
+
+#btn-photo {
+
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 0px;
+  font-size: 20px;
+  opacity: 0;
+
+}
+
+#btn-photo button {
+  color: #D4C3B5;
+  border-color: #D4C3B5;
+  font-size: 17px;
+  border-radius: 10px 120px / 120px;
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 5px
+}
+
+#btn-navigation {
+
+  display: flex;
+  justify-content: space-around;
+  padding: 5px;
+
+
+
+}
+
+#btn-navigation button {
+  color: #D4C3B5;
+  background: transparent;
+  border: none;
+  font-size: 15px;
+
+}
+
+#listPlanete {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background: #262e39;
+  color: #D4C3B5;
+  font-size: 20px;
+
+}
+
+#listPlanete h3 {
+
+  background: black;
+  text-align: left;
+  padding: 5px;
+  margin: 0px;
+
+}
+
+#listPlanete ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 5px;
+
+}
+
+#listPlanete ul li {
+  display: flex;
+  justify-content: space-between;
+  padding: 2px;
+  text-align: left;
+  -webkit-animation-name: fadeIn; /* Fade in the background */
+  -webkit-animation-duration: 0.4s;
+  animation-name: fadeIn;
+  animation-duration: 0.4s
+}
+
+#listPlanete ul li a {
+  flex: 1;
+}
+
+#listPlanete ul li > * {
+
+  padding: 5px;
+}
+
+/* The Modal (background) */
+.modal {
+  display: block; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  -webkit-animation-name: fadeIn; /* Fade in the background */
+  -webkit-animation-duration: 0.4s;
+  animation-name: fadeIn;
+  animation-duration: 0.4s;
+}
+
+/* Modal Content */
+.modal-content {
+  position: fixed;
+  bottom: 0;
+  background-color: #fefefe;
+  width: 100%;
+  height: 100%;
+  -webkit-animation-name: slideIn;
+  -webkit-animation-duration: 0.4s;
+  animation-name: slideIn;
+  animation-duration: 0.4s
+}
+
+/* The Close Button */
+.close {
+  color: black;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-header {
+  padding: 2px 16px;
+  background-color: #D4C3B5;
+  color: black;
+}
+
+.modal-header input {
+  background: transparent;
+  border: none;
+  font-size: 20px;
+
+}
+
+/* Add Animation */
+@-webkit-keyframes slideIn {
+  from {
+    bottom: -300px;
+    opacity: 0
+  }
+  to {
+    bottom: 0;
+    opacity: 1
+  }
+}
+
+@keyframes slideIn {
+  from {
+    bottom: -300px;
+    opacity: 0
+  }
+  to {
+    bottom: 0;
+    opacity: 1
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0
+  }
+  to {
+    opacity: 1
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0
+  }
+  to {
+    opacity: 1
+  }
+}
+
+
+
+@-webkit-keyframes fadeOut {
+  from {
+    opacity: 1
+  }
+  to {
+    opacity: 0
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1
+  }
+  to {
+    opacity: 0
+  }
+}
+
+
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
