--- a/src/App.css
+++ b/src/App.css
@@ -1,157 +1,158 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+    animation: App-logo-spin infinite 20s linear;
+    height: 40vmin;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 
 .visible {
-  display: flex ;
+    display: flex;
 }
 
 .novisible {
-  display: none !important
+    display: none !important
 
 }
 
 html, body {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 
-  overflow: hidden;
-  margin: 0;
+    overflow: hidden;
+    margin: 0;
 }
 
 #btn {
-  height: 18%;
-  width: 100%;
-  position: absolute;
-  bottom: 0px;
-  display: flex;
+    height: 18%;
+    width: 100%;
+    position: absolute;
+    bottom: 0px;
+    display: flex;
 
-  flex-direction: column;
-  justify-content: flex-end;
+    flex-direction: column;
+    justify-content: flex-end;
 
 }
 
 #divBtnAgenda {
-  display: flex;
-  justify-content: space-around;
-  margin-bottom: 0px;
-  font-size: 20px;
-  color: white;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 0px;
+    font-size: 20px;
+    color: white;
 }
 
 #divBtnAgenda input {
-  color: #D4C3B5;
-  border-color: #D4C3B5;
-  font-size: 17px;
-  border-radius: 10px 120px / 120px;
-  background-color: rgba(0, 0, 0, 0.7);
-  padding: 5px
+    color: #D4C3B5;
+    border-color: #D4C3B5;
+    font-size: 17px;
+    border-radius: 10px 120px / 120px;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 5px
 }
 
 #btn-photo {
 
-  display: flex;
-  justify-content: space-around;
-  margin-bottom: 0px;
-  font-size: 20px;
-  /*opacity: 0;*/
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 0px;
+    font-size: 20px;
+    /*opacity: 0;*/
 
 }
 
 #btn-photo button {
-  color: #D4C3B5;
-  border-color: #D4C3B5;
-  font-size: 17px;
-  border-radius: 10px 120px / 120px;
-  background-color: rgba(0, 0, 0, 0.7);
-  padding: 5px
+    color: #D4C3B5;
+    border-color: #D4C3B5;
+    font-size: 17px;
+    border-radius: 10px 120px / 120px;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 5px
 }
 
-button:focus {outline:0;}
+button:focus {
+    outline: 0;
+}
 
 
 #btn-navigation {
-
-  display: flex;
-  justify-content: space-around;
-  padding: 5px;
-
-
+    display: flex;
+    justify-content: space-around;
+    padding: 5px;
 
 }
 
 #btn-navigation button {
-  color: #D4C3B5;
-  background: transparent;
-  border: none;
-  font-size: 15px;
+    color: #D4C3B5;
+    background: transparent;
+    border: none;
+    font-size: 15px;
 
 }
 
 #listPlanete {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  background: #262e39;
-  color: #D4C3B5;
-  font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background: #262e39;
+    color: #D4C3B5;
+    font-size: 20px;
 
 }
 
 #listPlanete h3 {
 
-  background: black;
-  text-align: left;
-  padding: 5px;
-  margin: 0px;
+    background: black;
+    text-align: left;
+    padding: 5px;
+    margin: 0px;
 
 }
 
-#listPlanete ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 5px;
+#listPlanete {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 
 }
 
-#listPlanete ul li {
-  display: flex;
-  justify-content: space-between;
-  padding: 2px;
-  text-align: left;
-  -webkit-animation-name: fadeIn; /* Fade in the background */
-  -webkit-animation-duration: 0.4s;
-  animation-name: fadeIn;
-  animation-duration: 0.4s
+#listPlanete li {
+    display: flex;
+    justify-content: space-between;
+    padding: 2px 10px;
+    text-align: left;
 }
 
-#listPlanete ul li a {
-  flex: 1;
+
+#listPlanete li div svg:first-child {
+    padding: 0 10px 0 0;
+    flex: 2;
 }
 
-#listPlanete ul li > * {
+#listPlanete li div:last-child svg:last-child {
+    padding: 0 0 0 10px;
+    flex: 2;
+}
 
-  padding: 5px;
+#listPlanete li > * {
+    padding: 5px;
 }
