--- a/src/App.css
+++ b/src/App.css
@@ -169,6 +169,7 @@ a {
     justify-content: space-between;
     padding: 2px 10px;
     text-align: left;
+    cursor: default;
 }
 
 
@@ -184,4 +185,19 @@ a {
 
 #listPlanete li > * {
     padding: 5px;
+}
+
+/* animation fade de base */
+
+.fade-enter {
+    opacity: 0;
+    z-index: 1;
+    transitionDelay: 300;
+
+}
+
+.fade-enter.fade-enter-active {
+    opacity: 1;
+    transition: opacity 250ms ease-in;
+    transitionDelay: 300;
 }
