--- a/src/style/Popup.css
+++ b/src/style/Popup.css
@@ -24,6 +24,14 @@
     flex-direction: column;
     flex-wrap: nowrap;
     border-radius: 5px;
+    max-width: 70%;
+
+
+}
+
+.popup p {
+    color: black;
+    padding: 0 20px;
 
 }
 
@@ -55,20 +63,25 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-
     border: none;
     color: white;
     justify-content: flex-end;
     min-width: 15em;
     background: #1D5EA8;
-    padding: 0;
     margin: 20px auto;
+    padding-right: 0;
 }
 
-.arrow {
+.buttonPopup .cube {
     background: rgba(0, 0, 0, 0.1);
     flex-grow: 1;
-    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.buttonPopup .cube .arrow {
     padding: 0 10px;
 }
 
@@ -77,10 +90,11 @@
     background: #1f8cdf;
 }
 
-.buttonPopup > h3 {
+.buttonPopup > p {
     flex-grow: 3;
-    padding: 0.4em 1em;
-    font-size: 14px
+    font-size: 14px;
+    color: white;
+    font-weight: bold;
 
 }
 
