--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,16 @@ html, body {
 
     overflow: hidden;
     margin: 0;
+    position: relative;
+
 }
+
+#root {
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+}
+
 
 #btn {
     width: 100%;
