--- a/src/style/Utilisateurs.css
+++ b/src/style/Utilisateurs.css
@@ -23,8 +23,13 @@
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
-    width: 200px;
-    height: 200px;
+    min-width: 150px;
+    min-height: 150px;
+    width: 30vw;
+    height: 30vw;
+
+    max-width: 300px;
+    max-height: 300px;
     border: 4px solid #1D5EA8;
     margin: 15px;
 
@@ -61,6 +66,22 @@
 
 }
 
+
+.headerUserRetour {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.4);
+    margin: 6px 0;
+    align-items: center;
+    cursor: default;
+
+}
+
+.headerUserRetour .iconRetour {
+    padding: 5px 10px
+}
+
 .containeNumber {
     display: flex;
     flex-direction: row;
@@ -68,7 +89,9 @@
     padding: 10px;
     justify-content: center;
 
+
 }
+
 
 .containeNumber div:first-child {
     color: #1D5EA8;
